--- a/dataManager/Web.config
+++ b/dataManager/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-dataManager-20230529103141.mdf;Initial Catalog=aspnet-dataManager-20230529103141;Integrated Security=True" providerName="System.Data.SqlClient" />
+	  <add name="DataConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Data;Integrated Security=True;Connect Timeout=60;Encrypt=False" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
   </appSettings>
