--- a/DesktopUI/DesktopUI.csproj
+++ b/DesktopUI/DesktopUI.csproj
@@ -86,6 +86,8 @@
     <Compile Include="Helpers\IAPIHelper.cs" />
     <Compile Include="ICalculations.cs" />
     <Compile Include="Models\AuthenticatedUser.cs" />
+    <Compile Include="Models\ILoggedInUser.cs" />
+    <Compile Include="Models\LoggedInUser.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
     <Compile Include="Views\LoginView.xaml.cs">
